--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Emanuele Maria Ventura's homepage">
     <meta name="author" content="Emanuele Maria Ventura">
 
-    <title>Welcome to Emanuele Maria Ventura's Homepage</title>
+    <title>Emanuele Maria Ventura</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -84,9 +84,9 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">ABOUT ME</h2>
                     <hr>
-                    <p class="text-faded">I am a PHD student at <a href="http://www.unimelb.edu.au/">The University of Melbourne</a> under the supervision of Prof. Stuart Wyithe and Dr. Yuxiang Qin.</p>
-                    <p> My main research interests are Population III stars, Epoch of Reionization, 21cm physics and Galaxy formation.</p> 
-                    <p> Before the PhD I got my B.Sc in Astronomy and my M.Sc in Astrophysics and Cosmology at <a href="https://www.unipd.it/en/">The University of Padua</a>.
+                    <p>I am a PHD student at <a href="http://www.unimelb.edu.au/">The University of Melbourne</a> under the supervision of Prof. Stuart Wyithe and Dr. Yuxiang Qin.</p>
+                    <p> My main research interests are Population III stars, Epoch of Reionization, 21cm physics, Cosmological Simulations and Galaxy formation.</p> 
+                    <p class="text-faded"> Before the PhD I got my B.Sc in Astronomy and my M.Sc in Astrophysics and Cosmology at <a href="https://www.unipd.it/en/">The University of Padua</a>.
                         During my Master Thesis I visited The University of Rome <a href="https://www.uniroma1.it/en/pagina-strutturale/home"> "La Sapienza"</a> working there with Prof. Raffaella Schneider.
                     </p>
                 </div>
@@ -125,10 +125,10 @@
             <p>&nbsp;</p>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <ul class="list-inline">
+                    <ul class="icons">
                             <li><a href=mailto:eventura@student.unimelb.edu.au class="icon circle fa-envelope"><span class=label>Email</span></a></li>
-                            <li><a href="https://github.com/EMventura"><i class="icon circle fa-github"></i><span class=label>Github</span></a></li>
-                            <li><a href="https://www.linkedin.com/in/emanuele-maria-ventura-2098282a2/"><i class="icon circle fa-linkedin"></i><span class=label>Linkedin</span></a></li>
+                            <li><a href="https://github.com/EMventura" class="icon circle fa-github"><span class=label>Github</span></a></li>
+                            <li><a href="https://www.linkedin.com/in/emanuele-maria-ventura-2098282a2/" class="icon circle fa-linkedin"><span class=label>Linkedin</span></a></li>
                     </ul>
                 </div>
             </div>
