--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
             <p>&nbsp;</p>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <ul class="icons">
-                            <li><a href=mailto:eventura@student.unimelb.edu.au class="icon circle fa-envelope"><span class=label>Email</span></a></li>
-                            <li><a href="https://github.com/EMventura" class="icon circle fa-github"><span class=label>Github</span></a></li>
-                            <li><a href="https://www.linkedin.com/in/emanuele-maria-ventura-2098282a2/" class="icon circle fa-linkedin"><span class=label>Linkedin</span></a></li>
+                    <ul class="list-inline">
+                            <li><a href=mailto:eventura@student.unimelb.edu.au class="btn-social btn-outline"><i class="fa fa-2x fa-envelope"></i></a></li>
+                            <li><a href="https://github.com/EMventura" class="btn-social btn-outline"><i class="fa fa-2x fa-github"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/emanuele-maria-ventura-2098282a2/" class="btn-social btn-outline"><i class="fa fa-2x fa-linkedin"></i></a></li>
                     </ul>
                 </div>
             </div>
