Change icon color and bg

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 </head>
 
-<body id="page-top"  class="bg-dark">
+<body id="page-top"  class="bg-dark.bg-gradient">
 
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
@@ -72,7 +72,7 @@
             <div class="header-content-inner">
                 <h1>Emanuele Maria Ventura </h1>
                 <hr>
-                <p>PHD student at University of Melbourne.</p>
+                <p>PhD student at University of Melbourne.</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">About me</a>
             </div>
         </div>
@@ -84,16 +84,16 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">ABOUT ME</h2>
                     <hr>
-                    <p>I am a PHD student at <a href="http://www.unimelb.edu.au/">The University of Melbourne</a> under the supervision of Prof. Stuart Wyithe and Dr. Yuxiang Qin.</p>
+                    <p>I am a PhD student at <a href="http://www.unimelb.edu.au/">The University of Melbourne</a> under the supervision of Prof. Stuart Wyithe and Dr. Yuxiang Qin.</p>
                     <p> My main research interests are Population III stars, Epoch of Reionization, 21cm physics, Cosmological Simulations and Galaxy formation.</p> 
-                    <p class="text-faded"> Before the PhD I got my B.Sc in Astronomy and my M.Sc in Astrophysics and Cosmology at <a href="https://www.unipd.it/en/">The University of Padua</a>.
+                    <p class="text-faded"> Before the PhD, I got my B.Sc in Astronomy and my M.Sc in Astrophysics and Cosmology at <a href="https://www.unipd.it/en/">The University of Padua</a>.
                         During my Master Thesis I visited The University of Rome <a href="https://www.uniroma1.it/en/pagina-strutturale/home"> "La Sapienza"</a> working there with Prof. Raffaella Schneider.
                     </p>
                 </div>
             </div>
             <p>&nbsp;</p>
             <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-4 col-md-6 text-center">
                     <a href="./cv.html" style="text-decoration: none">
                         <div class="service-box">
                             <i class="fa fa-4x fa-user wow bounceIn text-primary"></i>
@@ -102,7 +102,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-4 col-md-6 text-center">
                     <a href="./research.html" style="text-decoration: none">
                         <div class="service-box">
                             <i class="fa fa-4x fa-graduation-cap wow bounceIn text-primary" data-wow-delay=".1s"></i>
@@ -111,7 +111,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-4 col-md-6 text-center">
                     <a href="./contact.html" style="text-decoration: none">
                         <div class="service-box">
                             <i class="fa fa-4x fa-envelope-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
