Color change pt.2

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 </head>
 
-<body id="page-top"  class="bg-dark.bg-gradient">
+<body id="page-top"  class="bg-dark">
 
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
@@ -105,7 +105,7 @@
                 <div class="col-lg-4 col-md-6 text-center">
                     <a href="./research.html" style="text-decoration: none">
                         <div class="service-box">
-                            <i class="fa fa-4x fa-graduation-cap wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                            <i class="fa fa-4x fa-graduation-cap wow bounceIn text-primary" style="color:green" data-wow-delay=".1s"></i>
                             <h3>Research</h3>
                             <p class="text-muted">Some research highlights.</p>
                         </div>
