--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
             </div>
             <div class="col-lg-8 col-lg-offset-2 text-center">
                     Copyright &copy; Emanuele Maria Ventura
+                    Background: Max Planck Society
             </div>
         </div>
     </section>
