--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Emanuele Maria Ventura </h1>
+                <h1>Emanuele M. Ventura </h1>
                 <hr>
                 <p>PhD student at University of Melbourne.</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">About me</a>
@@ -133,8 +133,8 @@
                 </div>
             </div>
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                    Copyright &copy; Emanuele Maria Ventura
-                    Background: Max Planck Society
+                    <li>Copyright &copy; Emanuele Maria Ventura</li>
+                    <li>Background: Max Planck Society</li>
             </div>
         </div>
     </section>
