--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Emanuele Maria Ventura</a>
+                <a class="navbar-brand page-scroll" href="#page-top" style="text-decoration: none">Emanuele Maria Ventura</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -133,8 +133,9 @@
                 </div>
             </div>
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <li>Copyright &copy; Emanuele Maria Ventura</li>
-                    <li>Background: Max Planck Society</li>
+                    Copyright &copy; Emanuele Maria Ventura 
+                    <br><br>
+                    Background: Max Planck Society
             </div>
         </div>
     </section>
