--- a/cv.html
+++ b/cv.html
@@ -76,8 +76,8 @@
                     <a id="pdf" href="./pdf/Long_CV_Ventura.pdf" class="btn btn-primary btn-xl page-scroll"  style="text-decoration: none">Here for the academic CV</a>
                 </div>
                 <div class="yui-gc">
-                    <a href="https://orcid.org/0000-0003-3502-4929">ORCID</a> 
-                    <a href="https://ui.adsabs.harvard.edu/user/libraries/-YXsCxgFQISx8YNQ7qOSJA">My Publications</a>
+                    <a href="https://orcid.org/0000-0003-3502-4929" class="btn btn-primary btn-xl page-scroll">ORCID</a> 
+                    <a href="https://ui.adsabs.harvard.edu/user/libraries/-YXsCxgFQISx8YNQ7qOSJA" class="btn btn-primary btn-xl page-scroll">My Publications</a>
                 </div>
             </hr>
         </div>
@@ -149,6 +149,9 @@
                                     </span><br>
                                     <span style="font-size:14px">
                                         Emanuele M. Ventura, Alessandro Trinca, Raffaella Schneider, Luca Graziani, Rosa Valiante, and J. Stuart B. Wyithe
+                                    </span><br>
+                                    <span style="font-size:14px">
+                                        <a href="https://academic.oup.com/mnras/article/520/3/3609/6998577">MNRAS (2023), 520, 3609-3625</a> 
                                     </span><br />
                                 </div><!--// .yui-gf -->
                             </div>
