--- a/cv.html
+++ b/cv.html
@@ -76,8 +76,11 @@
                     <a id="pdf" href="./pdf/Long_CV_Ventura.pdf" class="btn btn-primary btn-xl page-scroll"  style="text-decoration: none">Here for the academic CV</a>
                 </div>
                 <div class="yui-gc">
-                    <a href="https://orcid.org/0000-0003-3502-4929" class="btn btn-primary btn-xl page-scroll">ORCID</a> 
-                    <a href="https://ui.adsabs.harvard.edu/user/libraries/-YXsCxgFQISx8YNQ7qOSJA" class="btn btn-primary btn-xl page-scroll">My Publications</a>
+                    <a href="https://orcid.org/0000-0003-3502-4929" class="btn btn-primary btn-xl page-scroll" style="text-decoration: none" style="background-color:gray">ORCID
+                    </a> 
+                    <a href="https://ui.adsabs.harvard.edu/user/libraries/-YXsCxgFQISx8YNQ7qOSJA" class="btn btn-primary btn-xl page-scroll" style="text-decoration: none" 
+                    style="background-color:gray">
+                        My Publications</a>
                 </div>
             </hr>
         </div>
