Adding cv cover image

--- a/cv.html
+++ b/cv.html
@@ -70,19 +70,20 @@
     
     <section id="contact" class="bg-dark">
         <div class="row text-center">
-            background-image: url(./img/evo_cv.png)
-            <h2>Curriculum vitae</h2>
-            <hr class="star-primary">
-                <div class="yui-u">
-                    <a id="pdf" href="./pdf/Long_CV_Ventura.pdf" class="btn btn-primary btn-xl page-scroll"  style="text-decoration: none">Here for the academic CV</a>
-                </div>
-                <div class="yui-gc">
-                    <a href="https://orcid.org/0000-0003-3502-4929" class="btn btn-primary btn-xl page-scroll" style="text-decoration: none">ORCID
-                    </a> 
-                    <a href="https://ui.adsabs.harvard.edu/user/libraries/-YXsCxgFQISx8YNQ7qOSJA" class="btn btn-primary btn-xl page-scroll" style="text-decoration: none">
-                        My Publications</a>
-                </div>
-            </hr>
+            <cvheader>
+                <h2>Curriculum vitae</h2>
+                <hr class="star-primary">
+                  <div class="yui-u">
+                       <a id="pdf" href="./pdf/Long_CV_Ventura.pdf" class="btn btn-primary btn-xl page-scroll"  style="text-decoration: none">Here for the academic CV</a>
+                 </div>
+                 <div class="yui-gc">
+                        <a href="https://orcid.org/0000-0003-3502-4929" class="btn btn-primary btn-xl page-scroll" style="text-decoration: none">ORCID
+                        </a> 
+                     <a href="https://ui.adsabs.harvard.edu/user/libraries/-YXsCxgFQISx8YNQ7qOSJA" class="btn btn-primary btn-xl page-scroll" style="text-decoration: none">
+                          My Publications</a>
+                    </div>
+                </hr>
+            </cvheader>
         </div>
         <div id="doc4" class="yui-t7">
 	       <div id="inner">
