--- a/cv.html
+++ b/cv.html
@@ -94,7 +94,7 @@
                                 <div class="yui-gf">
                                      <p>&nbsp;</p>
                                      <div class="yui-u first">
-                                         <h7>Academic History</h7>
+                                         <h7><i>Academic History</i></h7>
                                      </div>
                                      <div class="yui-u">
                                          <p>
@@ -105,8 +105,8 @@
                                              <span style="font-size:14px">
                                                  <i>Thesis:</i> First stars: where do they form? What is their impact to galaxy evolution? 
                                              </span><br />
-                                             <span style="font-size:12px">
-                                                 Supervisor: Prof. J. Stuart B. Wyithe and Dr. Yuxiang Qin from UniMelb.
+                                             <span style="font-size:14px">
+                                                 <i>Supervisor:</i> Prof. J. Stuart B. Wyithe and Dr. Yuxiang Qin from UniMelb.
                                              </span><br />
                                              <span class="text-muted" align="right" style="font-size:16px">
                                                  Jan. 2022 - ongoing
@@ -120,8 +120,8 @@
                                              <span style="font-size:14px">
                                                  <i>Thesis:</i> Modeling the 21cm global signal from first stars and black holes.
                                              </span><br />
-                                             <span style="font-size:12px">
-                                                 Supervisor: Prof. Michela Mapelli (UniPd) and Prof. Raffaella Schneider (University of Rome "La Sapienza").
+                                             <span style="font-size:14px">
+                                                 <i>Supervisor:</i> Prof. Michela Mapelli (UniPd) and Prof. Raffaella Schneider (University of Rome "La Sapienza").
                                              </span><br />
                                              <span class="text-muted" align="right" style="font-size:16px">
                                                  Sep. 2019 - Sep. 2021 
@@ -135,8 +135,8 @@
                                             <span style="font-size:14px">
                                                 <i>Thesis:</i> Multiple populations in Magellanic Clouds globular clusters.
                                             </span><br />
-                                            <span style="font-size:12px">
-                                                Supervisor: Prof. Antonino P. Milone (UniPd) and Dr. Anna F. Marino  (UniPd).
+                                            <span style="font-size:14px">
+                                                <i>Supervisor</i>: Prof. Antonino P. Milone (UniPd) and Dr. Anna F. Marino  (UniPd).
                                             </span><br />
                                             <span class="text-muted" align="right" style="font-size:16px">
                                                 Sep. 2016 - Sep. 2019 
