--- a/cv.html
+++ b/cv.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R422DSCLH8"></script>
+    <script>
+     window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-R422DSCLH8');
+    </script>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -59,6 +68,9 @@
                         <a class="page-scroll" href="./research.html" style="text-decoration: none">research</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="./meraxes.html" style="text-decoration: none">meraxes</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="./contact.html" style="text-decoration: none">Contact</a>
                     </li>
                 </ul>
@@ -109,7 +121,7 @@
                                          <p>
                                              M.Sc. Astrophysics & Cosmology.
                                              <span style="font-size:16px">
-                                                 The University of Padua (UniPd), Italy.
+                                                 University of Padua (UniPd), Italy.
                                              </span><br />
                                              <span style="font-size:14px">
                                                  <i>Thesis:</i> Modeling the 21cm global signal from first stars and black holes.
@@ -124,7 +136,7 @@
                                          <p>
                                             B.Sc. Astronomy.
                                             <span style="font-size:16px">
-                                                The University of Padua (UniPd), Italy.
+                                                University of Padua (UniPd), Italy.
                                             </span><br />
                                             <span style="font-size:14px">
                                                 <i>Thesis:</i> Multiple populations in Magellanic Clouds globular clusters.
@@ -137,6 +149,76 @@
                                             </span>
                                         </p>
                                      </div>
+                                </div>
+                                <div class="yui-gf">
+                                    <div class="yui-u first">
+                                        <h7><i>Selected Grants & Awards</i></h7>
+                                    </div>
+                                    <div class="yui-u">
+                                        <p>
+                                            (Merit) ND Goldsworthy Scholarship (2022)
+                                            <span style="font-size:16px">
+                                                University of Melbourne (UniMelb), Australia
+                                            </span><br />
+                                            <span style="font-size:14px">
+                                                <a href="https://scholarships.unimelb.edu.au/awards/n-d-goldsworthy-scholarship-for-physics">Details of the award here</a> 
+                                            </span><br />
+                                        </p>
+                                        <p>
+                                            (Merit) UniPd Scholarship "Mille e una lode" (2019)
+                                            <span style="font-size:16px">
+                                                University of Padua (UniPd), Italy
+                                            </span><br />
+                                        </p>
+                                    </div>
+                                </div><!--// .yui-gf -->
+                                <div class="yui-gf">
+                                    <div class="yui-u first">
+                                        <h7><i>Teaching & Outreach</i></h7>
+                                    </div>
+                                    <div class="yui-u">
+                                        <p>
+                                            Lab Coordinator (2024 - present).
+                                            <span style="font-size:16px">
+                                                "From the Solar System to the Cosmos", University of Melbourne (UniMelb), Australia
+                                            </span><br />
+                                            <span style="font-size:14px">
+                                                First year Physics Undergraduate Program: Assisting with the preparation of course materials, maintaining and updating the LMS 
+                                                and teaching small classes while facilitating a team of demonstrators and markers. 
+                                            </span><br />
+                                        </p>
+                                        <p>
+                                            Meet-an-expert (2022).
+                                            <span style="font-size:16px">
+                                                Teaching basic astronomy to 8-10 years old kids including preparation of hands-on activities.
+                                            </span><br />
+                                        </p>
+                                    </div>
+                                </div><!--// .yui-gf -->
+                                <div class="yui-gf">
+                                    <div class="yui-u first">
+                                        <h7>Selected Articles</h7>
+                                    </div>
+                                    <p>&nbsp;</p>
+                                    <span style="font-size:18px">
+                                        <b>Semi-analytic modelling of Pop. III star formation and metallicity evolution - I. Impact on the UV luminosity
+                                            functions at z = 9-16.</b>
+                                    </span><br>
+                                    <span style="font-size:14px">
+                                        Emanuele M. Ventura, Yuxiang Qin, Balu Sreedhar, and J. Stuart B. Wyithe
+                                    </span><br>
+                                    <span style="font-size:14px">
+                                        <a href="https://academic.oup.com/mnras/article/529/1/628/7612996">MNRAS (2024), 529, 628</a> 
+                                    </span><br />
+                                    <span style="font-size:18px">
+                                        <b>The role of Pop III stars and early black holes in the 21-cm global signal from Cosmic Dawn.</b>
+                                    </span><br>
+                                    <span style="font-size:14px">
+                                        Emanuele M. Ventura, Alessandro Trinca, Raffaella Schneider, Luca Graziani, Rosa Valiante, and J. Stuart B. Wyithe
+                                    </span><br>
+                                    <span style="font-size:14px">
+                                        <a href="https://academic.oup.com/mnras/article/520/3/3609/6998577">MNRAS (2023), 520, 3609-3625</a> 
+                                    </span><br />
                                 </div><!--// .yui-gf -->
                             </div>
                         </div>
