--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 
 <head>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R422DSCLH8"></script>
+    <script>
+     window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-R422DSCLH8');
+    </script>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -58,6 +68,9 @@
                         <a class="page-scroll" href="./research.html" style="text-decoration: none">research</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="./meraxes.html" style="text-decoration: none">meraxes</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="./contact.html" style="text-decoration: none">Contact</a>
                     </li>
                 </ul>
@@ -84,8 +97,9 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">ABOUT ME</h2>
                     <hr>
-                    <p>I am a PhD student at <a href="http://www.unimelb.edu.au/">The University of Melbourne</a> under the supervision of Prof. Stuart Wyithe and Dr. Yuxiang Qin.</p>
+                    <p> I am a PhD student at <a href="http://www.unimelb.edu.au/">The University of Melbourne</a> under the supervision of Prof. Stuart Wyithe and Dr. Yuxiang Qin.</p>
                     <p> My main research interests are Population III stars, Epoch of Reionization, 21cm physics, Cosmological Simulations and Galaxy formation.</p> 
+                    <p> I am one of the lead developers of Meraxes, a semi-analytic model of galaxy formation and reionization with more than 20 refereed published papers.</p>
                     <p class="text-faded"> Before the PhD, I got my B.Sc in Astronomy and my M.Sc in Astrophysics and Cosmology at <a href="https://www.unipd.it/en/">The University of Padua</a>.
                         During my Master Thesis I visited The University of Rome <a href="https://www.uniroma1.it/en/pagina-strutturale/home"> "La Sapienza"</a> working there with Prof. Raffaella Schneider.
                     </p>
@@ -93,7 +107,7 @@
             </div>
             <p>&nbsp;</p>
             <div class="row">
-                <div class="col-lg-4 col-md-6 text-center">
+                <div class="col-lg-3 col-md-6 text-center">
                     <a href="./cv.html" style="text-decoration: none">
                         <div class="service-box">
                             <i class="fa fa-4x fa-user wow bounceIn text-primary"></i>
@@ -102,7 +116,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-md-6 text-center">
+                <div class="col-lg-3 col-md-6 text-center">
                     <a href="./research.html" style="text-decoration: none">
                         <div class="service-box">
                             <i class="fa fa-4x fa-graduation-cap wow bounceIn text-primary" style="color:green" data-wow-delay=".1s"></i>
@@ -111,10 +125,19 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-md-6 text-center">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <a href="./meraxes.html" style="text-decoration: none">
+                        <div class="service-box">
+                            <i class="fa fa-4x fa-solid fa-dragon wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                            <h3>Meraxes</h3>
+                            <p class="text-muted">Check me out: I am a dragon!</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
                     <a href="./contact.html" style="text-decoration: none">
                         <div class="service-box">
-                            <i class="fa fa-4x fa-envelope-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                            <i class="fa fa-4x fa-envelope-o wow bounceIn text-primary" style="color:green" data-wow-delay=".2s"></i>
                             <h3>Contact</h3>
                             <p class="text-muted">Let's get in touch!</p>
                         </div>
